[21] Reduce Hero image size to prevent horizontal scroll

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -42,7 +42,7 @@
     height: 300px;
 
     @media (min-width: 1024px) {
-      height: 700px;
+      height: 550px;
     }
   }
 }
